- Se agregó la opción de pegar un link a una imagen al momento de agregar/editar un posteo. En el menú de edición se muestra si un posteo tiene un link a imagen y se puede abrir.

--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -32,6 +32,10 @@
                         <label for="contenido" class="form-label">Contenido</label>
                         <input type="text" class="form-control" id="contenido" name="contenido">
                     </div>
+                    <div class="mb-3">
+                        <label for="contenido" class="form-label">Pegar imagen relacionada al posteo (opcional)</label>
+                        <input type="text" class="form-control" id="imagen" name="imagen">
+                    </div>
                     <button type="submit" class="btn btn-primary">Guardar</button>
                     </form>
             </div>
