--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -7,7 +7,6 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-
 <body>  
       <table class="table table-striped">
         <thead>
@@ -26,41 +25,54 @@
             <!-- <th scope="col">Id</th> -->
             <th scope="col">Título</th>
             <th scope="col">Contenido</th>
+            <th scope="col">Imagen</th>
             <th scope="col"></th>
             <th scope="col"></th>
           </tr>
         </thead>
         <tbody>          
             <% posteos.forEach((item) => { %>
-              <tr>
-                <!-- <th scope="row"><%= item.id %></th> -->
-                <td><%= item.titulo %></td>
-                <td><%= item.contenido %></td>         
-                <td>
-                    <a type="button" class="btn btn-warning" href="/editar/<%= item.id %>">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-pencil" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                          <path d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4" />
-                          <path d="M13.5 6.5l4 4" />
-                        </svg>
-                      </a>
-                </td>
-                <td>
-                <a type="button" class="btn btn-danger" href="/eliminar/<%= item.id %>">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M4 7l16 0" />
-                    <path d="M10 11l0 6" />
-                    <path d="M14 11l0 6" />
-                    <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
-                    <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
-                  </svg>
-                </a>
-                </td>
-              </tr>
+            <tr>
+              <!-- <th scope="row"><%= item.id %></th>     muestra el ID en la tabla -->
+              <td><%= item.titulo %></td>
+              <td><%= item.contenido %></td>    
+            
+
+             <!-- link a la imagen subida -->
+            <% if(item.imagen){ %>  
+              <td><a class="link-opacity-25-hover" href="<%= item.imagen %>">Ver</a></td>
+        
+             <% } else{ %>  
+                 <td>Sin imagen</td>
+             <% } %>
+
+
+
+              <td>
+                  <a type="button" class="btn btn-warning" href="/editar/<%= item.id %>">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-pencil" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4" />
+                        <path d="M13.5 6.5l4 4" />
+                      </svg>
+                    </a>
+              </td>
+              <td>
+              <a type="button" class="btn btn-danger" href="/eliminar/<%= item.id %>">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M4 7l16 0" />
+                  <path d="M10 11l0 6" />
+                  <path d="M14 11l0 6" />
+                  <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
+                  <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
+                </svg>
+              </a>
+              </td>
+            </tr>
           <% }) %>
-        </tbody>        
-      </table> 
+        </tbody>       
+      </table>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body> 
 </html>
