--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foro personal</title>
+    <title>Menú Edición</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-<body>  
-      <table class="table table-striped">
-        <thead>
-          <tr>
+<body>
+      <nav class="navbar bg-body-tertiary" style="padding: 30px">
+        <div class="container-fluid">
+          <a class="navbar-brand">Edición de posteos</a>
+
+          <form class="d-flex" role="search">
             <a type="button" class="btn btn-dark" href="/listado">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="28" height="28" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -19,13 +21,20 @@
                 <path d="M10 12h4v4h-4z" />
               </svg>
             </a>
-              <a type="button" class="btn btn-success" href="/agregar">
+          </form>
+        </div>
+      </nav>
+
+      <table class="table table-striped">
+        <thead>
+          <tr>            
+             <!--  <a type="button" class="btn btn-success" href="/agregar">
                 Agregar posteo
-              </a>
+              </a> -->
             <!-- <th scope="col">Id</th> -->
-            <th scope="col">Título</th>
-            <th scope="col">Contenido</th>
-            <th scope="col">Imagen</th>
+            <th scope="col">TÍTULO</th>
+            <th scope="col">CONTENIDO</th>
+            <th scope="col">IMAGEN</th>
             <th scope="col"></th>
             <th scope="col"></th>
           </tr>
@@ -35,18 +44,22 @@
             <tr>
               <!-- <th scope="row"><%= item.id %></th>     muestra el ID en la tabla -->
               <td><%= item.titulo %></td>
-              <td><%= item.contenido %></td>    
-            
+              <td><%= item.contenido %></td>
+              
+              <% if(item.imagen){ %>   <!-- link a la imagen subida -->
+                  <td><a class="link-opacity-25-hover" href="<%= item.imagen %>">Ver</a></td>
+              <% } else{ %>  
+                  <td>Sin imagen</td>
+              <% } %>
 
-             <!-- link a la imagen subida -->
-            <% if(item.imagen){ %>  
-              <td><a class="link-opacity-25-hover" href="<%= item.imagen %>">Ver</a></td>
-        
-             <% } else{ %>  
-                 <td>Sin imagen</td>
-             <% } %>
-
-
+              <!-- agregar este icono para ver imagen -->
+             <!-- <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-photo" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M15 8h.01" />
+                <path d="M3 6a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v12a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3v-12z" />
+                <path d="M3 16l5 -5c.928 -.893 2.072 -.893 3 0l5 5" />
+                <path d="M14 14l1 -1c.928 -.893 2.072 -.893 3 0l3 3" />
+              </svg> -->
 
               <td>
                   <a type="button" class="btn btn-warning" href="/editar/<%= item.id %>">
