--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> <%= titlePosteo %>  </title>
+        <title> <%= miTitulo %>  </title>
        
        <!-- Estilos de Bootstrap 5 -->
         <link
