- Se agrego un NavBar en las vistas Partials que se renderiza en Inicio y en el Menú edición. - Se agregó un icono en Inicio que muestra información sobre el proyecto.

--- a/src/views/menuEdicion.ejs
+++ b/src/views/menuEdicion.ejs
@@ -1,9 +1,10 @@
 <%- include('partials/head') %>
 
 <body>
+  <%- include("partials/navBar") %>
       <nav class="navbar bg-body-tertiary" style="padding: 30px">
         <div class="container-fluid">
-          <a class="navbar-brand"><%= miTitulo %></a>
+          <!-- <a class="navbar-brand"><%= miTitulo %></a> -->
 
           <a type="button" class="btn btn-success" href="/crearPosteo">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="25" height="25" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -14,7 +15,7 @@
             </svg>    Nuevo posteo
           </a>
 
-          <form class="d-flex" role="search">
+          <!-- <form class="d-flex" role="search">
             <a type="button" class="btn btn-dark" href="/">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="25" height="25" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -23,7 +24,7 @@
                 <path d="M10 12h4v4h-4z" />
               </svg>
             </a>
-          </form>
+          </form> -->
         </div>
       </nav>
 
