--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/head') %>
 
 <body>  
-    <nav class="navbar bg-body-tertiary" style="padding: 30px">
+  <%- include("partials/navBar") %>
+
+ <!--    <nav class="navbar bg-body-tertiary" style="padding: 30px">
         <div class="container-fluid">
           <a class="navbar-brand">Posteos del foro            
           </a>
@@ -12,7 +14,45 @@
           </form>
         </div>
     </nav>
-  <br />        
+  <br /> -->    
+
+  <!--  <box-icon name='copyright'></box-icon> -->
+  
+</nav>
+<br />
+
+<!-- <div style="display: flex; justify-content: center">
+  <a class="btn btn-outline-dark mt-3"
+    ><i class="bx bxs-user bx-lg"></i
+  ></a>
+</div> -->
+
+
+<p>
+  
+</p>
+
+<div style=" display: flex; justify-content: center">
+  <button class="btn btn-dark" type="button"
+      
+      data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+      aria-expanded="false" aria-controls="collapseWidthExample">
+      
+      <i class="bx bxs-user bx-lg" ></i>
+      </button>
+
+  <div class="collapse collapse-horizontal" id="collapseWidthExample">
+    <div class="card card-body" style="width: 300px;">
+      Rodriguez Dario
+      <br/>
+        Correo: rodriguezrrdario@gmail.com
+      <br/>
+        Comisión: 21648 C
+    </div>
+  </div>
+</div>
+
+
   <%- include("partials/footer")%>
 </body> 
 </html>
