--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -17,6 +17,9 @@
             rel="stylesheet"
         />
 
+        <!-- Popper para popover -->
+        <script src=https://unpkg.com/@popperjs/core@2></script>
+
         <!-- Boostrap Js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     </head>
