- Se agrego info en el icono de Inicio

--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -2,37 +2,9 @@
 
 <body>  
   <%- include("partials/navBar") %>
-
- <!--    <nav class="navbar bg-body-tertiary" style="padding: 30px">
-        <div class="container-fluid">
-          <a class="navbar-brand">Posteos del foro            
-          </a>
-          <form class="d-flex" role="search">
-            <a type="button" class="btn btn-success" href="/menuEdicion">
-              Menú Edición
-            </a>
-          </form>
-        </div>
-    </nav>
-  <br /> -->    
-
-  <!--  <box-icon name='copyright'></box-icon> -->
-  
-</nav>
 <br />
 
-<!-- <div style="display: flex; justify-content: center">
-  <a class="btn btn-outline-dark mt-3"
-    ><i class="bx bxs-user bx-lg"></i
-  ></a>
-</div> -->
-
-
-<p>
-  
-</p>
-
-<div style=" display: flex; justify-content: center">
+<div style="display: flex; justify-content: center">
   <button class="btn btn-dark" type="button"
       
       data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
@@ -43,11 +15,17 @@
 
   <div class="collapse collapse-horizontal" id="collapseWidthExample">
     <div class="card card-body" style="width: 300px;">
-      Rodriguez Dario
+      Curso: Lenguajes de Programación I
       <br/>
-        Correo: rodriguezrrdario@gmail.com
+        Plataforma virtual: EPICA
       <br/>
         Comisión: 21648 C
+      <br/>
+      <br/>
+        Rodriguez Dario
+      <br/>
+        rodriguezrrdario@gmail.com
+           
     </div>
   </div>
 </div>
